--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         HADRONIO_URL: ${HADRONIO_URL}
     ports:
       - "8080:8080"
-    command: java ${JVM_PARAMS} /usr/app/NioServer.java
+    command: java ${JVM_PARAMS} com.github.kochkozharov.NioServer
   client:
     build:
       dockerfile: Dockerfile
@@ -18,4 +18,4 @@ services:
       - server
     ports:
       - "9010:9010"
-    command: java ${JVM_PARAMS} ${JVM_VISUALVM_PARAMS} -XX:MaxDirectMemorySize=1G /usr/app/NioClient.java
+    command: java ${JVM_PARAMS} ${JVM_VISUALVM_PARAMS} -XX:MaxDirectMemorySize=1G com.github.kochkozharov.NioClient
