--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(11)
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
@@ -20,27 +20,27 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.18.0'
 }
 
-
-
-task NioServerJar(type: Jar) {
-    archiveBaseName = 'NioServer'
-    from sourceSets.main.output
-    manifest {
-        attributes 'Main-Class': 'com.github.kochkozharov.NioServer'
-    }
-}
-
-task NioClientJar(type: Jar) {
-    archiveBaseName = 'NioClient'
-    from sourceSets.main.output
-    manifest {
-        attributes 'Main-Class': 'com.github.kochkozharov.NioClient'
-    }
-}
-
-NioServerJar.dependsOn shadowJar
-NioClientJar.dependsOn shadowJar
-
 wrapper {
     gradleVersion = "7.5"
 }
+
+
+//task NioServerJar(type: Jar) {
+//    archiveBaseName = 'NioServer'
+//    from sourceSets.main.output
+//    manifest {
+//        attributes 'Main-Class': 'com.github.kochkozharov.NioServer'
+//    }
+//}
+//
+//task NioClientJar(type: Jar) {
+//    archiveBaseName = 'NioClient'
+//    from sourceSets.main.output
+//    manifest {
+//        attributes 'Main-Class': 'com.github.kochkozharov.NioClient'
+//    }
+//}
+//
+//NioServerJar.dependsOn shadowJar
+//NioClientJar.dependsOn shadowJar
+//
