--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8080:8080"
       - "9010:9010"
-    command: java ${JVM_PARAMS} ${JVM_VISUALVM_PARAMS_SERVER} com.github.kochkozharov.NioServer
+    command: java ${JVM_PARAMS} com.github.kochkozharov.Main server
   client:
     build:
       dockerfile: Dockerfile
@@ -15,4 +15,4 @@ services:
       - "9011:9011"
     depends_on:
       - server
-    command: java ${JVM_PARAMS} ${JVM_VISUALVM_PARAMS_CLIENT} -XX:MaxDirectMemorySize=1G com.github.kochkozharov.NioClient
+    command: java ${JVM_PARAMS} com.github.kochkozharov.Main test_client
