--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,8 @@ java {
 }
 
 dependencies {
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.18.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.19.0'
 }
 
 wrapper {
